// Copyright (c) 2019 The DAML Authors. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

// .proto representation of the first version of the DAML-LF 1.6 language,
// as specified by
// <https://github.com/digital-asset/daml/tree/c2e2e007e78828180d73ab7280a52b21376e3189/daml-lf/spec/daml-lf-1.rst>.
//
// A few notes:
//
// * We generally "compress" structures that are often repeated, such as
//   application, let bindings, abstractions, etc.. In the Haskell / Scala
//   AST we probably will use the normal binary forms.
// * We generally never "newtype" strings, even if it might be good in
//   the actual AST. This is to keep the message structure relatively flat
//   and light.


// Minor version history (to be officialized in the spec):
// * 0 (somewhen in December 2018): initial version
// * 1 -- 2019-01-10: Add Optional type
//     -- 2019-01-27: Add <, <=, =>, > for Party
//     -- 2019-01-29: Add PrimType.ARROW
// * 2 -- 2019-03-18: Add BuiltinFunction.{SHA256_TEXT, TO_TEXT_PARTY, FROM_TEXT_PARTY}
//     -- 2019-03-18: Add flexible controllers (change scoping of controller expressions)
// * 3 -- 2019-03-25: Add contract keys
//     -- 2019-03-27: Add Map type
// * 4 -- 2019-05-15: Add complex contract keys
// * 5 -- 2019-05-22: Relax serializability constraints for contract ids
//        2019-05-23: Add BuiltinFunction.COERCE_CONTRACT_ID
//        2019-05-24: Make actors in exercise optional
// * 6 -- 2019-05-27: Add enum type.
//        2019-06-04: Add BuiltinFunction.{TEXT_FROM_CODE_POINTS, TEXT_TO_CODE_POINTS}
//        2019-06-12: Add Package.interned_package_ids and PackageRef.interned_id
//        2019-07-04: Transaction submitters must be in contract key maintainers when looking up. See #1866.

syntax = "proto3";
package daml_lf_1;

option java_package = "com.digitalasset.daml_lf_1_6";
option csharp_namespace = "Com.DigitalAsset.Daml_lf_1_6.DamlLf1";

// Canonical encoding in one-ofs for cases that carry no meaningful
// values.
message Unit {}

// Package reference
message PackageRef {
  oneof Sum {

    // Reference to the package of which the package this reference
    // belongs.
    Unit self = 1;

    // A `Package identifier` for an imported Package.
    // A ascii7 lowercase hex-encoded package identifier. This refers
    // to the DAML LF Archive Hash.
    string package_id = 2;

    // An index into `interned_package_ids` of the Package containing
    // this reference.
    uint64 interned_id = 3; /* Available since version 1.6 */
  }
}

// A `name`, e.g. Util.Either.isLeft
message DottedName {

  // *Must be a non-empty list of a valid identifiers*
  repeated string segments = 1;

}

// A fully qualified module reference
message ModuleRef {

  // package where the module is defined.
  PackageRef package_ref = 1;

  // module name
  DottedName module_name = 2;

}

// A fully qualified reference to a type constructor name.
message TypeConName {

  // Module where the type is defined.
  ModuleRef module = 1;

  // type constructor name.
  DottedName name = 2;

}

// A fully qualified reference to a value definition.
message ValName {

  // Module where the value is defined
  ModuleRef module = 1;

  // value name.
  repeated string name = 2;
}

// A field name definition in a record or a variant associated with a type.
message FieldWithType {

  // Name of the field .
  // *Must be a valid identifier*
  string field = 1;

  // Type associated
  Type type = 2;
}

// Binder associated with a type.
message VarWithType {

  // Name of the bound expression variable.
  // *Must be a valid identifier*
  string var = 1;

  // Type of the bound variable
  Type type = 2;
}

// Type binder associated with a kind.
message TypeVarWithKind {
  // Name of the bound expression variable
  // *Must be a valid identifier*
  string var = 1;
  // Kind of the bound variable
  Kind kind = 2;
}

// A field in a record with its value.
message FieldWithExpr {
  // Name of the field
  // *Must be a valid identifier*
  string field = 1;
  // Value of the field
  Expr expr  = 2;
}

// A binding of a typed binder to an expression
message Binding {
  // The binder (expression variable and type)
  VarWithType binder = 1;
  // The value to which the variable is bound.
  Expr bound = 2;
}

// Kinds
message Kind {

  // The kind of polymorphic type.
  message Arrow {
    // parameter of the kind
    // *Must be non-empty*
    repeated Kind params = 1;
    Kind result = 2;
  }

  oneof Sum {
    // Kind of monomorphic type.
    Unit star = 1;
    // Kind of polymorphic type.
    Arrow arrow = 2;
  }
}

// Builtin primitive types
enum PrimType {
  // Builtin type 'Unit'
  UNIT = 0;

  // Builtin type 'Bool'
  BOOL = 1;

  // Builtin type 'Int64'
  INT64 = 2;

  // Builtin type 'Int64'
  DECIMAL = 3;

  // CHAR = 4; // we have removed this in favor of TEXT for everything text related.

  // Builtin type 'Text'
  TEXT = 5;

  // Builtin type 'Timestamp'
  TIMESTAMP = 6;

  // RELTIME = 7; // we removed this in favor of INT64.

  // Builtin tpe 'Party'
  PARTY = 8;

  // Builtin type 'List'
  LIST = 9;

  // Builtin type 'Update'
  UPDATE = 10;

  // Builtin type 'Scenatrio'
  SCENARIO = 11;

  // Builtin type 'Date'
  DATE = 12;

  // Builtin type 'ContractId'
  CONTRACT_ID = 13;

  // Builtin type 'Optional'
  // *Available since version 1.1*
  OPTIONAL = 14;

  // Builtin type `TArrow`
  // *Available since version 1.1*
  ARROW = 15;

  // Builtin type 'TMap`
  // *Available since version 1.3*
  MAP = 16;

}

// Types
message Type {

  // Possibly applied type variable 'TyVar'
  message Var {

    // Name of the variable.
    // *Must be a valid identifier*
    string var = 1;

    // Types to which the variable is applied
    repeated Type args = 2;
  }

  // Possibly applied type constructor 'TyCon'
  message Con {

    // Name of the type constructor name
    TypeConName tycon = 1;

    // Type to which the constructor name is applied.
    repeated Type args = 2;
  }

  // Possibly applied builtin types
  message Prim {

    // Builtin type
    // FixMe: Rename
    PrimType prim = 1;

    // Types to which the builtin type is applied.
    repeated Type args = 2;
  }

  // n-ary function type
  // *Available until version 1.2*
  message Fun {
    // type of the arguments
    // *Must be non-empty*
    repeated Type params = 1;
    // type of the result
    Type result = 2;
  }

  // Universal quantification 'TyForAll'
  message Forall {
    // binders of the quantification
    // *Must be non-empty*
    repeated TypeVarWithKind vars = 1;
    // Body of the quantification
    Type body = 2;
  }

  // Tuple type
  message Tuple{
    // name of the field with their types.
    repeated FieldWithType fields = 1;
  }

  oneof Sum {
    Var var = 1;
    Con con = 2;
    Prim prim = 3; // FixMe: renamed
    Fun fun = 4;
    Forall forall = 5;
    Tuple tuple = 7;
  }

  reserved 6; // This was list.  Removed in favour of PrimType.LIST
  reserved 8; // This was contract_id. Removed in favour of PrimType.CONTRACT_ID
  reserved 9; // This was update. Removed in favour of PrimType.UPDATE
  reserved 10; // This was scenario. Removed in favor of PrimType.SCENARIO

}

// Primitive constructors
enum PrimCon {

  // Unit value '()'
  CON_UNIT = 0;

  // 'False' boolean value
  CON_FALSE = 1;

  // 'True' boolean value
  CON_TRUE = 2;
}

// Builtin functions
// Refer to DAML-LF major version 1 specification for types and behavior of those.
enum BuiltinFunction {
  ADD_DECIMAL = 0;
  SUB_DECIMAL = 1;
  MUL_DECIMAL = 2;
  DIV_DECIMAL = 3;
  ROUND_DECIMAL = 6;

  ADD_INT64 = 7;
  SUB_INT64 = 8;
  MUL_INT64 = 9;
  DIV_INT64 = 10;
  MOD_INT64 = 11;
  EXP_INT64 = 12;

  FOLDL = 20;
  FOLDR = 21;

  MAP_EMPTY = 96;
  MAP_INSERT = 97;
  MAP_LOOKUP = 98;
  MAP_DELETE = 99;
  MAP_TO_LIST = 100;
  MAP_SIZE = 101;

  EXPLODE_TEXT = 23;
  APPEND_TEXT = 24;

  ERROR = 25;

  LEQ_INT64 = 33;
  LEQ_DECIMAL = 34;
  LEQ_TEXT = 36;
  LEQ_TIMESTAMP = 37;
  LEQ_DATE = 67;
  LEQ_PARTY = 89; // *Available Since version 1.1*

  LESS_INT64 = 39;
  LESS_DECIMAL = 40;
  LESS_TEXT = 42;
  LESS_TIMESTAMP = 43;
  LESS_DATE = 68;
  LESS_PARTY = 90; // *Available Since version 1.1*

  GEQ_INT64 = 45;
  GEQ_DECIMAL = 46;
  GEQ_TEXT = 48;
  GEQ_TIMESTAMP = 49;
  GEQ_DATE = 69;
  GEQ_PARTY = 91; // *Available Since version 1.1*

  GREATER_INT64 = 51;
  GREATER_DECIMAL = 52;
  GREATER_TEXT = 54;
  GREATER_TIMESTAMP = 55;
  GREATER_DATE = 70;
  GREATER_PARTY = 92; // *Available Since version 1.1*

  TO_TEXT_INT64 = 57;
  TO_TEXT_DECIMAL = 58;
  TO_TEXT_TEXT = 60;
  TO_TEXT_TIMESTAMP = 61;
  TO_TEXT_DATE = 71;
  TO_QUOTED_TEXT_PARTY = 63; // legacy, remove in next major version
  TO_TEXT_PARTY = 94; // *Available Since version 1.2*
  FROM_TEXT_PARTY = 95; // *Available Since version 1.2*, was named FROM_TEXT_PARTY in 1.2, 1.3 and 1.4
  FROM_TEXT_INT64 = 103; // *Available Since version 1.5*
  FROM_TEXT_DECIMAL = 104; // *Available Since version 1.5*
  SHA256_TEXT = 93; // *Available Since version 1.2*

  DATE_TO_UNIX_DAYS = 72; // Date -> Int64
  UNIX_DAYS_TO_DATE = 73; // Int64 -> Date

  TIMESTAMP_TO_UNIX_MICROSECONDS = 74; // Timestamp -> Int64
  UNIX_MICROSECONDS_TO_TIMESTAMP = 75; // Int64 -> Timestamp

  INT64_TO_DECIMAL = 76;
  DECIMAL_TO_INT64 = 77;

  IMPLODE_TEXT = 78;

  EQUAL_INT64 = 79;
  EQUAL_DECIMAL = 80;
  EQUAL_TEXT = 81;
  EQUAL_TIMESTAMP = 82;
  EQUAL_DATE = 83;
  EQUAL_PARTY = 84;
  EQUAL_BOOL = 85;
  EQUAL_CONTRACT_ID = 86;
  EQUAL_LIST = 87;

  TRACE = 88;

  COERCE_CONTRACT_ID = 102;

  TEXT_FROM_CODE_POINTS = 105;  // : List Int64 -> Text   *Available since version 1.6*
  TEXT_TO_CODE_POINTS = 106; //: Text -> List Int64    *Available since version 1.6*
  // Next id is 107. 106 is TEXT_TO_CODE_POINTS.
}

// Builtin literals
// FixMe: Renamed
message PrimLit {
  oneof Sum {

    //  64-bit integer literal ('LitInt64')
    sint64 int64 = 1;

    // Decimal literal ('LitDecimal')
    //
    // Serialization of number in ``[-1E28, 1E28]``
    // with at most 10 digits of decimal precision.
    //
    // *Must be a string that matched
    //        `[+-]*[0-9]{0,28}(\.[0-9]{0,10})*`*
    //
    // It would fit in an int128, but sadly protobuf does not have
    // one. so, string it is. note that we can't store the whole and
    // decimal part in two numbers either, because 10^28 > 2^63.
    string decimal = 2;

    // Unicode string literal ('LitText')
    string text = 4;

    // UTC timestamp literal ('LitTimestamp')
    //
    // Microseconds since the UNIX epoch. can go backwards.
    //
    // *Must be in range 001-01-01T00:00:00Z to
    // 9999-12-31T23:59:59.999999Z

    // sfixed since the vast majority of values will be greater than
    // 2^28, since currently the number of microseconds since the
    // epoch is greater than that.
    sfixed64 timestamp = 5;

    // Party literal ('LitParty')
    // *Must be a PartyId string*
    string party = 7;

    // Date literal ('Date')
    // Serialization of the number of days since the unix epoch. can go backwards.
    //
    // *Must be in range '0001-01-01' to '9999-12-31'*
    int32 date = 8;
  }

  reserved 3; // This was char.
  reserved 6; // This was reltime;
}

// Source code locations
message Location {

  // 0-indexed start and end line and column numbers.
  message Range {
    int32 start_line = 1;
    int32 start_col = 2;
    int32 end_line = 3;
    int32 end_col = 4;
  }

  ModuleRef module = 1; // (*optional*), if missing the line is within the current module.
  Range range = 2;
}


// Expressions
message Expr {

  // Record construction ('ExpRecCon')
  message RecCon {

    // type of the record being constructed
    Type.Con tycon = 1;

    // Field names and the associated values.
    repeated FieldWithExpr fields = 2;
  }

  // Record projection (ExpRecProj)
  message RecProj {

    // type of the record being projected.
    Type.Con tycon = 1;

    // Name of the record field to be projected on.
    // *must be a valid Identifier*
    string field = 2;

    // projected expression
    Expr record = 3;
  }

  // Record update ('ExpRecUp')
  message RecUpd {

    // type of the record being updated
    Type.Con tycon = 1;

    // Name of the updated field.
    // *must be a valid identifier*
    string field = 2;

    // Actual record being updated
    Expr record = 3;

    // Value to wich the record is udpated
    Expr update = 4;
  }

  // Variant construction ('ExpVariantCon')
  message VariantCon {

    // type of the variant being constructed
    Type.Con tycon = 1;

    // name of the variant constructor
    // *Must be a valid identifier*
    string variant_con = 2;

    // Argument of the variant.
    Expr variant_arg = 3;
  }

   // Enum construction ('ExpEnumCon')
   // *Available since version 1.6*
   message EnumCon {

     // Name of the type constructor name
     TypeConName tycon = 1;

     // name of the enum constructor
     // *Must be a valid identifier*
     string enum_con = 2;
   }

  // Tuple Construction ('ExpTupleCon')
  message TupleCon {
    // Field names and their associated values.
    repeated FieldWithExpr fields = 1;
  }

  // Tuple Projection ('ExpTupleProj')
  message TupleProj {

    // Name of the field to be projected on.
    // *Must be a valid Identifier*
    string field = 1;

    // tuple to be projected.
    Expr tuple = 2;
  }

  // Tuple update ('ExpTuplUpdate')
  message TupleUpd {

    // Name of the updated field.
    // *must be a valid identifier*.
    string field = 1;

    // Actual tuple being updated.
    Expr tuple = 2;

    // Value to which the record is udpated.
    Expr update = 3;
  }


  // Application ('ExpApp')
  message App {

    // Function
    Expr fun = 1;

    // Arguments of the function.
    // *Must be non-empty*
    repeated Expr args = 2;
  }

  // Type application ('ExpTyApp')
  message TyApp {

    // Polymorphic expression
    Expr expr = 1;

    // Arguments of the function.
    // *Must be non-empty*
    repeated Type types = 2;
  }

  // Abstraction ('ExpAbs')
  message Abs {

    // Abstracted Variables with their kind
    // *Must be non-empty*
    repeated VarWithType param = 1;

    // Abstracted value
    Expr body  = 2;
  }

  message TyAbs {

    // Abstracted Variables with their type
    // *Must be non-empty*
    repeated TypeVarWithKind param = 1;

    // Abstracted value
    Expr body = 2;
  }

  // Empty list ('ExpNil')
  message Nil {

    // type of the list elements.
    Type type = 1;
  }

  // Non empty list
  message Cons {

    // type of the list elements.
    Type type = 1;

    // Front element of the list.
    // *Must be non-empty*
    repeated Expr front = 2;

    // tail of the list
    Expr tail = 3;
  }

  // (*Since version 1*)
  // Empty optional value
  message OptionalNone {

    // type of the element
    Type type = 1;
  }

  // (*Since version 1*)
  // Non empty optional value
  message OptionalSome {

    // type of the element
    Type type = 1;

    // contained value
    // FixMe: renamed to 'value'
    Expr body = 2;
  }

  // Location of the expression in the DAML code source.
  // Optional
  Location location = 25;

  oneof Sum {

    // Expression variable ('ExpVar')
    // *must be a valid identifier*
    string var = 1;

    // Defined value ('ExpVal')
    ValName val = 2;

    // Builtin function ('ExpBuiltin')
    BuiltinFunction builtin = 3;

    // Primitive constructor ('()', 'False' or 'True')
    PrimCon prim_con = 4;

    // Builtin literal ('ExpBuiltin')
    PrimLit prim_lit = 5;

    // Record construction ('ExpRecCon')
    RecCon rec_con = 6;

    // Record projection ('ExpRecProj')
    RecProj rec_proj = 7;

    // Record udpate ('ExpRecUpdate')
    RecUpd rec_upd = 22;

    // Variant construction ('ExpVariantCon')
    VariantCon variant_con = 8;

    // Enum construction ('ExpEnumCon')
    EnumCon enum_con = 28;  // *Available since version 1.6*

    // Tuple construction ('ExpTupleCon')
    TupleCon tuple_con = 9;

    // Tuple project ('ExpTupleProj')
    TupleProj tuple_proj = 10;

    // Tuple update ('ExpTupleUpdate')
    TupleUpd tuple_upd = 23;

    // Application ('ExpApp')
    App app = 11;

    // Type Application ('ExpTyApp')
    TyApp ty_app =  12;

    // Abstraction ('ExpAbs')
    Abs abs = 13;

    // Type Abstraction ('ExpTyAbs')
    TyAbs ty_abs = 14;

    // Pattern Matching ('ExpCase')
    Case case = 15;

    // Let block ('ExpLet')
    Block let = 16;

    // Empty List ('ExpNil')
    Nil nil = 17;

    // Non Empty list ('ExpCons')
    Cons cons = 18;

    // Update expression ('ExpUpdate')
    Update update = 20;

    // Scenario Expression ('ExpScenario')
    Scenario scenario = 21;

    // empty optional value ('ExpNone')
    // *Available since version 1.1*
    OptionalNone optional_none = 26;

    // non empty optional value ('ExpSome')
    // *Available since version 1.1*
    OptionalSome optional_some = 27;
  }

  reserved 19; // This was equals. Removed in favour of BuiltinFunction.EQUAL_*
  reserved 24; // This was equal_contract_id. Removed in favour of BuiltinFunction.EQUAL_CONTRACT_ID
}

// Case alternative
message CaseAlt {

  // Variant pattern
  message Variant {

    // name of the type constructor
    TypeConName con = 1;

    // name of the variant constructor
    // *Must be a valid identifier*
    string variant = 2;

    // name of the variant binder
    // *Must be a valid identifier*
    string binder = 3;
  }

  // Enum pattern
  // *Available since version 1.6*
  message Enum {

    // name of the type constructor
    TypeConName con = 1;

    // name of the variant constructor
    // *Must be a valid identifier*
    string constructor = 2;
  }

  // Non empty list pattern
  message Cons {
    // name of the binder for the head
    // *Must be a valid identifier*
    string var_head = 1;

    // name of the binder for the tail
    // *Must be a valid identifier*
    string var_tail = 2;
  }

  // Non empty option patterm
  // *Available since version 1.1*
  message OptionalSome {
    string var_body = 1;
  }

  oneof Sum {
    Unit default = 1;
    Variant variant = 2;
    PrimCon prim_con = 3;
    Unit nil = 4;
    Cons cons = 5;
    Unit optional_none = 7; // * Available since version 1.1*
    OptionalSome optional_some = 8; // * Available since version 1.1*
    Enum enum = 9; // * Available since version 1.6*
  }

  Expr body = 6;
}

message Case {
  Expr scrut = 1;
  repeated CaseAlt alts = 2;
}

// A block of bindings and an expression.
// Encodes a sequence of binds in e.g. a let or update block.
message Block {
  // *Must be non-empty*
  // Bindings
  repeated Binding bindings = 1;
  Expr body = 2;
}

// A Pure statement either scenario or update
message Pure {
  Type type = 1;
  Expr expr = 2;
}

message Update {

  // Create Update
  message Create {
    // Template type
    TypeConName template = 1;
    // Template argument
    Expr expr = 2;
  }

  // Exercise Update
  message Exercise {
    // Template type
    TypeConName template = 1;
    // name of the exercised template choice
    string choice = 2;
    // contract id
    Expr cid = 3;
    // actors
    // *optional since version 1.5*
    Expr actor = 4;
    // argument
    Expr arg = 5;
  }

  // Fetch Update
  message Fetch {
    // Template type
    TypeConName template = 1;
    // contract id
    Expr cid = 2;
    reserved 3; // was actor, we thought we'd need this, but we don't
  }

  // Embeded Exression Update
  message EmbedExpr {
    // Expression type
    Type type = 1;
    // Expression body
    Expr body = 2;
  }

  // Retrieve by key Update
  // *Available since version 1.2*
  message RetrieveByKey {
    TypeConName template = 1;
    Expr key = 2;
  }

  oneof Sum {
    Pure pure = 1;
    Block block = 2;
    Create create = 3;
    Exercise exercise = 4;
    Fetch fetch = 5;
    Unit get_time = 6;
    RetrieveByKey lookup_by_key = 8; //*Available since version 1.2*
    RetrieveByKey fetch_by_key = 9; //*Available since version 1.2*
    // see similar constructor in `Scenario` on why this is useful.
    EmbedExpr embed_expr = 7;
  }
}

// Scenario actions
message Scenario {

  message Commit {
    // committing party
    Expr party = 1;
    //
    Expr expr = 2;
    // type of result
    Type ret_type = 3;
  }

  message EmbedExpr {
    Type type = 1;
    Expr body = 2;
  }

  oneof Sum {
    Pure pure = 1;
    Block block = 2;
    Commit commit = 3;
    Commit mustFailAt = 4;
    Expr pass = 5;
    Unit get_time = 6;
    Expr get_party = 7;
    // embed an expression of type Scenario. note that this construct is useful
    // to explicitly mark the start of scenario execution, which is useful in
    // top level definitions. for example if we hav
    //
    // def test : Scenario Unit = if <blah> then <this> else <that>
    //
    // this is not a value, since it's headed with an `if`, but we can turn
    // it into a value by wrapping the `if` with this constructor. in that
    // case, the `if` will be executed every time the scenario runs --
    // as expected.
    EmbedExpr embed_expr = 8;
  }
}

// Template choice definition.
message TemplateChoice {

  // *Must be a valid identifier*
  string name = 1;

  // Choice type
  bool consuming = 2;

  // The controllers of the choice. They have type `List Party` and the
  // template parameter in scope, but not the choice parameter. All of these
  // controllers need to authorize the exercising of this choice (aka
  // conjunctive choice controllers).
  Expr controllers = 3;

  // Name to which the choice argument is bound and its type.
  VarWithType arg_binder = 4;

  // Return type of the choice.
  Type ret_type = 5;

  // Follow-up update of the choice. It has type `Update <ret_type>` and both
  // the template parameter and the choice parameter in scope.
  Expr update = 6;

  // Name to bind the ContractId of the contract this choice is exercised on to.
  string self_binder = 7;

  Location location = 8;
}

// we restrict key expressions to records of projections, much like SQL
message KeyExpr {
    message Projection {
        Type.Con tycon = 1; // Always fully applied
        string field = 2;
    }

    // note that the projection is always referring to the template parameter.
    message Projections {
        repeated Projection projections = 2;
    }

    message RecordField {
        string field = 1;
        KeyExpr expr = 2;
    }

    message Record {
        Type.Con tycon = 1; // Always fully applied
        repeated RecordField fields = 2;
    }

    oneof Sum {
        Projections projections = 1;
        Record record = 2;
    }
}

// Contract template definition
message DefTemplate {

  message DefKey {
      Type type = 1;
      // NOTE(MH): The first version of contract keys had syntactic
      // restrictions that key expression had to be "simple". We lifted these
      // restrictions later and allowed arbitrarily complext key expressions.
      oneof key_expr {
          KeyExpr key = 2;
          Expr complex_key = 4;
      }
      Expr maintainers = 3; // a function from the key type to [Party]
  }

    // The type constructor for the template, acting as both
  // the name of the template and the type of the template argument.
  DottedName tycon = 1;

  // Name to which the template argument is bound.
  string param = 2;

  // NOTE(MH): The new runtime authorization check for DAML 1.0 does not rely
  // on the stakeholder signatures produced by the obligables computation
  // anymore but uses the interpreter to compute the signatories and
  // stakeholders of contract instances.
  // REMOVED: TemplateStakeholders stakeholders = 3;
  reserved 3;

  // Pre-condition that the template argument must satisfy.
  // When present, it has type `Bool` and the template parameter in scope.
  // *Optional*, interpreted as 'True' if undefined
  Expr precond = 4;

  // The signatories of the contract. They have type `List Party` and the
  // template parameter in scope.
  Expr signatories = 5;

  // The agreement text associated with the contract. It has type `Text` and
  // the template parameter in scope.
  Expr agreement = 6;

  // The choices available in the resulting contract.
  repeated TemplateChoice choices = 7;

  // The observers of the contract. They have type `List Party` and the
  // template parameter in scope.
  Expr observers = 8;

  Location location = 9;

  // They key definition for the template, if present
  DefKey key = 10; // optional // *Available since version 1.3*
}

// Data type definition
message DefDataType {
  message Fields {
    repeated FieldWithType fields = 1;
  }

  // *Available since version 1.6*
  message EnumConstructors {
    repeated string constructors = 1;
  }

  // name of the defined data type
  DottedName name = 1;

  // type parameters
  // *Must be empty if enum field is set*
  repeated TypeVarWithKind params = 2;

  oneof DataCons {
    Fields record = 3; // Records without fields are explicitly allowed.
    Fields variant = 4; // Variants without constructors are explicitly allowed.
    EnumConstructors enum = 7; // *Available since version 1.6*
  }

  // If true, this data type preserves serializability in the sense that when
  // all parameters are instantiated with serializable types (of kind '*'),
  // then the resulting type is serializable as well.
  // This flag is used to simplify package validation by not requiring an
  // inference but only a check. Such a check must validate that this flag is
  // set correctly and that template and choice argument and result types
  // have this flag set to true.
  bool serializable = 5;

  Location location = 6;
}

// Value definition
message DefValue {
  // The reason why we have this type instead of just flattening name
  // and type in DefValue is that it was VarWithType before, and we
  // want to be binary-compatible with it.
  message NameWithType {

    // Name of the value
    // *each element of name must be a valid identifier*
    repeated string name = 1;

    // Type of the value
    Type type = 2;
  }

  NameWithType name_with_type = 1;

  Expr expr = 2;

  // If true, the value must not contain any party literals and not reference
  // values which contain party literals.
  // This flag is used to simplify package validation by not requiring an
  // inference but only a check. Such a check must validate that this flag is
  // set correctly and that templates do not reference values which have this
  // flag set to false.
  bool no_party_literals = 3;

  bool is_test = 4;

  Location location = 5;
}

message FeatureFlags {
  bool forbidPartyLiterals = 1;
  bool dontDivulgeContractIdsInCreateArguments = 2;
  bool dontDiscloseNonConsumingChoicesToObservers = 3;
}

message Module {
  DottedName name = 1;
  // repeated Definition definitions = 2; // Removed in favour of data_types, values and templates.
  reserved 2;
  // repeated string scenario_tests = 3; // Removed in favour of DefValue.is_test.
  reserved 3;
  FeatureFlags flags = 4;
  repeated DefDataType data_types = 5;
  repeated DefValue values = 6;
  repeated DefTemplate templates = 7;
}

message Package {
  repeated Module modules = 1;
  repeated string interned_package_ids = 2; /* Available since version 1.6 */
}
